# precificador-ecommerce

./: .gitignore  README.md
backend/: main.py  pyproject.toml
backend/app/: extract.py  main.py  research.py  search.py
docs/: index.html  thermal_zpl_shipping_label.txt
docs/assets/: html2canvas-BHPTsw2F.js  html2canvas-DBX3JmAQ.js  index-B9A3VQNc.js  index-CSnLuyHu.css  index-Db9IAhPq.js  index.es-Ca1uqy1G.js  index.es-CcynimLr.js
frontend/: index.html  package-lock.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AmazonCalculator.tsx  Home.tsx  LabelConverter.tsx  MercadoLivreCalculator.tsx  PricingGuide.tsx  ProductResearch.tsx  ProductResearchSoon.tsx  ShopeeCalculator.tsx  common.tsx
frontend/src/lib/: api.ts  pricing.ts  utils.ts
